# ChaosBilling

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  help.txt  version.txt
.github/workflows/: build-release.yml
src/: bill.rs  calc.rs  cli.rs  display.rs  edit.rs  error.rs  macros.rs  main.rs  test.rs  who.rs
src/cli/: calc_cmd.rs  consts.rs  dispatchers.rs  entry.rs  io_error.rs  ops_cmd.rs
